force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Sprint__c/fields/agf__Backlog__c.field-meta.xml
<CustomField>
    <fullName>agf__Backlog__c</fullName>
    <formula>HYPERLINK(&quot;/apex/ADM_SprintBacklog?id=&quot; &amp;  Id , &quot;View Backlog&quot;, &quot;_top&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Backlog</label>
    <type>Text</type>
</CustomField>