force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Sprint__c/fields/agf__Committed_Items__c.field-meta.xml
<CustomField>
    <fullName>agf__Committed_Items__c</fullName>
    <label>Forecast Items</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>