force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Sprint__c/fields/agf__Committed_Story_Points_Completed__c.field-meta.xml
<CustomField>
    <fullName>agf__Committed_Story_Points_Completed__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Forecast Story Points Completed</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>