force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Sprint__c/fields/agf__Completed_Story_Points__c.field-meta.xml
<CustomField>
    <fullName>agf__Completed_Story_Points__c</fullName>
    <label>Velocity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>