force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Sprint__c/fields/agf__Completion_Items__c.field-meta.xml
<CustomField>
    <fullName>agf__Completion_Items__c</fullName>
    <formula>IF(
    OR(
        ISBLANK(agf__Completed_Items__c),
        ISBLANK(agf__Committed_Items__c)
    ),
    0,
    agf__Completed_Items__c/agf__Committed_Items__c
)</formula>
    <label>Completion Items</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>