force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Sprint__c/fields/agf__Days_Remaining__c.field-meta.xml
<CustomField>
    <fullName>agf__Days_Remaining__c</fullName>
    <formula>IF( TODAY() &lt; agf__Start_Date__c, &apos;NOT STARTED&apos;, IF( agf__End_Date__c &gt;= TODAY(), TEXT( ROUND(agf__End_Date__c - TODAY(), 0) + 1 ), &apos;CLOSED&apos; ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Remaining</label>
    <type>Text</type>
</CustomField>