force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Sprint__c/fields/agf__Definition_of_Done_Met__c.field-meta.xml
<CustomField>
    <fullName>agf__Definition_of_Done_Met__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Definition of Done Met</label>
    <type>Checkbox</type>
</CustomField>