force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Sprint__c/fields/agf__Discount_Work__c.field-meta.xml
<CustomField>
    <fullName>agf__Discount_Work__c</fullName>
    <defaultValue>0</defaultValue>
    <description>% to take off of the total time available</description>
    <label>Discount work time (%)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>