force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Sprint__c/fields/agf__Goals__c.field-meta.xml
<CustomField>
    <fullName>agf__Goals__c</fullName>
    <label>Goals</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>