force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Sprint__c/fields/agf__Hours_in_a_work_day__c.field-meta.xml
<CustomField>
    <fullName>agf__Hours_in_a_work_day__c</fullName>
    <defaultValue>6</defaultValue>
    <label>Hours in a work day</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>