force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Sprint__c/fields/agf__NameValidator__c.field-meta.xml
<CustomField>
    <fullName>agf__NameValidator__c</fullName>
    <description>This field is used to enforce a unique name as the standard Name field does not offer the option to enforce uniqueness.</description>
    <label>NameValidator</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>