force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Sprint__c/fields/agf__Projected_Velocity__c.field-meta.xml
<CustomField>
    <fullName>agf__Projected_Velocity__c</fullName>
    <label>Projected Velocity</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>