force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Sprint__c/fields/agf__Retrospective__c.field-meta.xml
<CustomField>
    <fullName>agf__Retrospective__c</fullName>
    <defaultValue>&quot;What went well? --&gt; &quot;  &amp; BR()  &amp;  &quot;What didn&apos;t go well? --&gt;&quot;  &amp; BR()  &amp; &quot;What can we do differently? --&gt;&quot;</defaultValue>
    <label>Retrospective</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>