force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Sprint__c/fields/agf__Risks__c.field-meta.xml
<CustomField>
    <fullName>agf__Risks__c</fullName>
    <label>Risks</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>