force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Sprint__c/fields/agf__Total_Workdays__c.field-meta.xml
<CustomField>
    <fullName>agf__Total_Workdays__c</fullName>
    <label>Total Workdays</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>