force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Sprint__c/fields/agf__Transformed__c.field-meta.xml
<CustomField>
    <fullName>agf__Transformed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Transformed</label>
    <type>Checkbox</type>
</CustomField>