force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Sprint__c/validationRules/agf__Hours_In_A_Work_Day.validationRule-meta.xml
<ValidationRule>
    <fullName>agf__Hours_In_A_Work_Day</fullName>
    <active>true</active>
    <description>Limit hours in a work day to a maximum of 24</description>
    <errorConditionFormula>agf__Hours_in_a_work_day__c &gt; 24</errorConditionFormula>
    <errorDisplayField>agf__Hours_in_a_work_day__c</errorDisplayField>
    <errorMessage>Hours in a work day cannot exceed 24</errorMessage>
</ValidationRule>