force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Sprint__c/validationRules/agf__Hours_In_A_Work_Day_Neg.validationRule-meta.xml
<ValidationRule>
    <fullName>agf__Hours_In_A_Work_Day_Neg</fullName>
    <active>true</active>
    <description>Limit hours in a work day to positive numbers</description>
    <errorConditionFormula>agf__Hours_in_a_work_day__c &lt; 0</errorConditionFormula>
    <errorDisplayField>agf__Hours_in_a_work_day__c</errorDisplayField>
    <errorMessage>Hours in a work day cannot be a negative number</errorMessage>
</ValidationRule>