force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Sprint__c/validationRules/agf__Projected_Velocity_Neg.validationRule-meta.xml
<ValidationRule>
    <fullName>agf__Projected_Velocity_Neg</fullName>
    <active>true</active>
    <description>Limit projected velocity to positive numbers</description>
    <errorConditionFormula>agf__Projected_Velocity__c &lt; 0</errorConditionFormula>
    <errorDisplayField>agf__Projected_Velocity__c</errorDisplayField>
    <errorMessage>Projected velocity cannot be a negative number</errorMessage>
</ValidationRule>