force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Sprint__c/validationRules/agf__Verify_end_date.validationRule-meta.xml
<ValidationRule>
    <fullName>agf__Verify_end_date</fullName>
    <active>true</active>
    <description>Make sure that end date &gt; start date (accidents happen)</description>
    <errorConditionFormula>agf__Start_Date__c &gt;= agf__End_Date__c</errorConditionFormula>
    <errorMessage>Your End Date must be after your Start Date</errorMessage>
</ValidationRule>