force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Sprint__c/validationRules/agf__Verify_length_of_sprint.validationRule-meta.xml
<ValidationRule>
    <fullName>agf__Verify_length_of_sprint</fullName>
    <active>true</active>
    <description>make sure sprint length is &lt;= 31</description>
    <errorConditionFormula>(agf__End_Date__c - agf__Start_Date__c) &gt; 31</errorConditionFormula>
    <errorDisplayField>agf__End_Date__c</errorDisplayField>
    <errorMessage>A sprint can&apos;t be longer than one month (31 days). Please correct your end date and click &apos;Save&apos;.</errorMessage>
</ValidationRule>