force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Sprint__c/listViews/agf__GUS_Sprints.listView-meta.xml
<ListView>
    <fullName>agf__GUS_Sprints</fullName>
    <columns>NAME</columns>
    <columns>agf__Days_Remaining__c</columns>
    <columns>agf__Start_Date__c</columns>
    <columns>agf__End_Date__c</columns>
    <columns>agf__Completed_Story_Points__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>agf__Scrum_Team__c</field>
        <operation>equals</operation>
        <value>GUS</value>
    </filters>
    <label>GUS Sprints</label>
</ListView>